--- a/magrathea.ui
+++ b/magrathea.ui
@@ -122,7 +122,7 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>1</number>
+        <number>2</number>
        </property>
        <widget class="QWidget" name="joystickTab">
         <attribute name="title">
@@ -1109,9 +1109,9 @@
             </widget>
            </item>
            <item row="6" column="6">
-            <widget class="QPushButton" name="FitTestButton">
+            <widget class="QPushButton" name="TestButton">
              <property name="text">
-              <string>Fit test</string>
+              <string>Test</string>
              </property>
             </widget>
            </item>
