--- a/magrathea.ui
+++ b/magrathea.ui
@@ -122,7 +122,7 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>4</number>
        </property>
        <widget class="QWidget" name="joystickTab">
         <attribute name="title">
@@ -1307,24 +1307,17 @@
          </item>
          <item row="0" column="0">
           <layout class="QGridLayout" name="gridLayout_15">
-           <item row="1" column="3">
-            <widget class="QLabel" name="label_38">
+           <item row="0" column="2">
+            <widget class="QPushButton" name="pushButton_2">
              <property name="text">
-              <string>R0 Loaded</string>
+              <string>Locate Petal</string>
              </property>
             </widget>
            </item>
-           <item row="4" column="3">
-            <widget class="QLabel" name="label_41">
+           <item row="2" column="3">
+            <widget class="QLabel" name="label_39">
              <property name="text">
-              <string>R3 Left Loaded</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="3">
-            <widget class="QLabel" name="label_37">
-             <property name="text">
-              <string>Petal is Located</string>
+              <string>R1 Loaded</string>
              </property>
             </widget>
            </item>
@@ -1335,27 +1328,36 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
-            <widget class="QComboBox" name="Module_comboBox"/>
-           </item>
-           <item row="2" column="3">
-            <widget class="QLabel" name="label_39">
-             <property name="text">
-              <string>R1 Loaded</string>
+           <item row="2" column="8">
+            <widget class="QDoubleSpinBox" name="MoveModuleTarget_U">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
              </property>
             </widget>
            </item>
-           <item row="3" column="3">
-            <widget class="QLabel" name="label_40">
+           <item row="0" column="3">
+            <widget class="QLabel" name="label_37">
              <property name="text">
-              <string>R2 Loaded</string>
+              <string>Petal is Located</string>
              </property>
             </widget>
            </item>
-           <item row="4" column="4">
-            <widget class="QLabel" name="label_43">
-             <property name="text">
-              <string>R3 Right Loaded</string>
+           <item row="3" column="8">
+            <widget class="QDoubleSpinBox" name="DropModuleTarget_U">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
              </property>
             </widget>
            </item>
@@ -1366,38 +1368,343 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="2">
-            <widget class="QPushButton" name="pushButton_2">
+           <item row="3" column="3">
+            <widget class="QLabel" name="label_40">
              <property name="text">
-              <string>Locate Petal</string>
+              <string>R2 Loaded</string>
              </property>
             </widget>
            </item>
-           <item row="5" column="4">
-            <widget class="QLabel" name="label_44">
+           <item row="1" column="3">
+            <widget class="QLabel" name="label_38">
              <property name="text">
-              <string>R4 Right Loaded</string>
+              <string>R0 Loaded</string>
              </property>
             </widget>
            </item>
-           <item row="5" column="3">
+           <item row="3" column="6">
+            <widget class="QDoubleSpinBox" name="DropModuleTarget_Y">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QComboBox" name="Module_comboBox"/>
+           </item>
+           <item row="3" column="7">
+            <widget class="QDoubleSpinBox" name="DropModuleTarget_Z">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="2">
+            <widget class="QLabel" name="label_41">
+             <property name="text">
+              <string>R3 Left Loaded</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="2">
             <widget class="QLabel" name="label_42">
              <property name="text">
               <string>R4 Left Loaded</string>
              </property>
             </widget>
            </item>
-           <item row="6" column="3">
+           <item row="6" column="2">
             <widget class="QLabel" name="label_45">
              <property name="text">
               <string>R4 Left Loaded</string>
              </property>
             </widget>
            </item>
-           <item row="6" column="4">
+           <item row="4" column="3">
+            <widget class="QLabel" name="label_43">
+             <property name="text">
+              <string>R3 Right Loaded</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="3">
+            <widget class="QLabel" name="label_44">
+             <property name="text">
+              <string>R4 Right Loaded</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="3">
             <widget class="QLabel" name="label_46">
              <property name="text">
               <string>R5 Right Loaded</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="4">
+            <widget class="QPushButton" name="PickUp_Button">
+             <property name="text">
+              <string>Pick up tool</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="4">
+            <widget class="QPushButton" name="PickUp_Module_Button">
+             <property name="text">
+              <string>Pick up module</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="4">
+            <widget class="QPushButton" name="PlaceModule_Button">
+             <property name="text">
+              <string>Place module</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="5">
+            <widget class="QDoubleSpinBox" name="PickUpTarget_X">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="6">
+            <widget class="QDoubleSpinBox" name="PickUpTarget_Y">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="7">
+            <widget class="QDoubleSpinBox" name="PickUpTarget_Z">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="8">
+            <widget class="QDoubleSpinBox" name="PickUpTarget_U">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="5">
+            <widget class="QDoubleSpinBox" name="MoveModuleTarget_X">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="6">
+            <widget class="QDoubleSpinBox" name="MoveModuleTarget_Y">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="7">
+            <widget class="QDoubleSpinBox" name="MoveModuleTarget_Z">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="5">
+            <widget class="QDoubleSpinBox" name="DropModuleTarget_X">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="5">
+            <widget class="QLabel" name="label_49">
+             <property name="text">
+              <string>Traget X</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="6">
+            <widget class="QLabel" name="label_70">
+             <property name="text">
+              <string>Target Y</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="7">
+            <widget class="QLabel" name="label_71">
+             <property name="text">
+              <string>Target Z</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="8">
+            <widget class="QLabel" name="label_72">
+             <property name="text">
+              <string>Target U</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="4">
+            <widget class="QPushButton" name="GlueLine_Button">
+             <property name="text">
+              <string>Glue line</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="4">
+            <widget class="QLabel" name="label_73">
+             <property name="text">
+              <string>START =&gt;</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="4">
+            <widget class="QLabel" name="label_74">
+             <property name="text">
+              <string>END =&gt;</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="5">
+            <widget class="QDoubleSpinBox" name="GlueStart_X">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="5">
+            <widget class="QDoubleSpinBox" name="GlueEnd_X">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="6">
+            <widget class="QDoubleSpinBox" name="GlueStart_Y">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="6">
+            <widget class="QDoubleSpinBox" name="GlueEnd_Y">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="7">
+            <widget class="QDoubleSpinBox" name="GlueStart_Z">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="7">
+            <widget class="QDoubleSpinBox" name="GlueEnd_Z">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="minimum">
+              <double>-500.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>500.000000000000000</double>
              </property>
             </widget>
            </item>
