--- a/magrathea.ui
+++ b/magrathea.ui
@@ -2051,6 +2051,13 @@
               </property>
              </widget>
             </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_75">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
@@ -2255,6 +2262,13 @@
               </property>
              </widget>
             </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_77">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
@@ -2453,6 +2467,13 @@
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_76">
+              <property name="text">
+               <string>TextLabel</string>
               </property>
              </widget>
             </item>
@@ -2660,6 +2681,13 @@
               </property>
              </widget>
             </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_79">
+              <property name="text">
+               <string>TextLabel</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
@@ -2826,6 +2854,13 @@
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="QLabel" name="label_78">
+              <property name="text">
+               <string>TextLabel</string>
               </property>
              </widget>
             </item>
