--- a/magrathea.ui
+++ b/magrathea.ui
@@ -1331,7 +1331,7 @@
          <item row="0" column="0">
           <layout class="QGridLayout" name="gridLayout_15">
            <item row="0" column="2">
-            <widget class="QPushButton" name="pushButton_2">
+            <widget class="QPushButton" name="btn_locate_petal">
              <property name="text">
               <string>Locate Petal</string>
              </property>
